# ffi-bbs-signatures

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  bbs-signatures.podspec  cbindgen.toml  package.json
.cargo/: config
.github/: pull_request_template.md
.github/workflows/: ci-dotnet.yml  ci-java.yml  ci-obj-c.yml  ci-python.yml  ci-scala.yml  ci.yml  github_backup.yaml  github_clone_assurance.yaml  obj-c-ci.yml  release.yml
.husky/: commit-msg  pre-commit
devops/: Build.ps1  azure-pipelines.yml  build-template.yml
docs/: API-DESIGN.md  CONTRIBUTING.md  RELEASE.md
dotnet/: README.md
dotnet/devops/: Build.ps1  Package.ps1  azure-pipelines.yml  build-template.yml  package-nuget.yml  run-tests.yml
dotnet/src/Hyperledger.Ursa.BbsSignatures/: BbsSignatureService.cs  Hyperledger.Ursa.BbsSignatures.csproj  UnmanagedMemoryContext.cs
dotnet/src/Hyperledger.Ursa.BbsSignatures.Tests/: Hyperledger.Ursa.BbsSignatures.Tests.csproj
dotnet/src/Hyperledger.Ursa.BbsSignatures.Tests.Ios/: Info.plist
dotnet/src/Hyperledger.Ursa.BbsSignatures/Extensions/: BbsSignatureServiceExtensions.cs
dotnet/src/Hyperledger.Ursa.BbsSignatures/Models/: ExternError.cs  (+3 more)
include/: bbs.h  bbs_test.c  build.sh
java/: Bbs.h  Bbs.java
scripts/: build.sh  generate-c-header.sh  install-dependencies.sh  prepare-release-artifacts.sh  test.sh
src/: android.rs  bbs_blind_commitment.rs  bbs_blind_proof.rs  bbs_blind_sign.rs  bbs_create_proof.rs  bbs_sign.rs  bbs_verify_proof.rs  bbs_verify_sign_proof.rs  bls.rs  java.rs  lib.rs  macros.rs
tests/: CMakeLists.txt  bbs_test.c
wrappers/dotnet/: .gitignore  BbsSignatures.sln  Directory.Build.props  README.md  global.json  nuget.config
wrappers/dotnet/devops/: Build.ps1  azure-pipelines.yml  build-template.yml  package-nuget.yml  run-tests.yml
wrappers/dotnet/src/: .editorconfig
wrappers/java/: .gitignore  README.md  build.gradle  settings.gradle
wrappers/obj-c/: README.md
wrappers/obj-c/bbs-signatures/: BbsSignatureError.h  BbsSignatureError.m  bbs.h  bbs_key_pair.h  bbs_key_pair.m  bbs_signature.h  bbs_signature.m  bbs_signature_proof.h  bbs_signature_proof.m  bbs_signatures.h  bls12381g2_key_pair.h  bls12381g2_key_pair.m
wrappers/obj-c/bbs-signatures.xcodeproj/: project.pbxproj
wrappers/obj-c/tests/: bbs_key_pair.m  bbs_signature.m  bbs_signature_proof.m  bls12381g2_key_pair.m
wrappers/python/: .gitignore  Pipfile  README.md  setup.py
wrappers/python/ursa_bbs_signatures/: __init__.py  api.py  version.py
wrappers/scala/: GNUmakefile  README.md  build.sbt  publish.sbt
wrappers/scala/project/: plugins.sbt
(+157 files in other folders)
