[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2018"
name = "ffi-bbs-signatures"
# Please ignore the below version this does not indicate the current package version
# instead please refer to ./package.json
version = "0.1.0"

[lib]
name = "bbs"
crate-type = ["staticlib", "cdylib"]

[profile.release]
lto = true
opt-level = 3

[profile.bench]
opt-level = 3
debug = false

[features]
default = []

[dependencies]
arrayref = "0.3"
bbs = "0.4"
bls_sigs_ref = "0.3"
ff-zeroize = "0.6"
ffi-support = "0.4"
hkdf = "0.8"
lazy_static = "1.4"
pairing-plus = "0.19"
rand = "0.7"
serde = { version = "1.0", features = ["serde_derive"] }
sha2 = "0.8"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.10.2"
