[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2018"
name = "ffi-bbs-signatures"
# Please ignore the below version this does not indicate the current package version
# instead please refer to ./package.json
version = "0.1.0"

[lib]
name = "bbs"
crate-type = ["staticlib", "cdylib"]

[profile.release]
lto = true
opt-level = 3

[profile.bench]
opt-level = 3
debug = false

[dependencies]
arrayref = "0.3"
bbs = { version = "0.4", git = "https://github.com/mikelodder7/ursa", branch = "master" }
ffi-support = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["serde_derive"] }
